feat: rename "Like" resource to "Upvote"
BREAKING CHANGE: In order to be more "Reddit-like", the "Like" resource
is now renamed to "Upvote".
