# app/controllers/api/v1/collection/likes_controller.rb
@@ -1,7 +1,0 @@
-class Api::V1::Collection::LikesController < Api::V1::LikesController
-  private
-
-  def set_likeable
-    @likeable = Collection.find(params[:collection_id])
-  end
-end
